<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_form_add_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.noteup.NoteAddUpdateActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarNoteEdt"
            app:titleCentered="true"
            app:titleTextColor="@color/primary_600"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_form"
            app:title="@string/app_name"
            app:navigationIcon="@drawable/ic_clear"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none">

                <EditText
                    android:id="@+id/edt_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/title"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="24sp"
                    android:inputType="textCapSentences"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/date"
                android:textColor="@color/secondary_700"
                android:fontFamily="@font/poppins_italic"
                android:textSize="12sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:boxBackgroundMode="none">

                <EditText
                    android:id="@+id/edt_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12sp"
                    android:minLines="20"
                    android:gravity="top"
                    android:scrollbars="vertical"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_submit"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>